# recognition

./: .gitignore  MATH.md  README.md  config.ini.example  move_jpgs_to_all_photos.sh  pyproject.toml  recognition.py  requirements.txt  run_recognition.sh
