[project]
name = "recognition"
version = "0.1.0"
description = "Face recognition"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.1.8",
    "dlib==19.24.6",
    "face-recognition==1.3.0",
    "face-recognition-models==0.3.0",
    "libsvm==3.23.0.4",
    "numpy==2.2.1",
    "opencv-python==4.10.0.84",
    "pillow==11.0.0",
    "scikit-image>=0.25.0",
    "scipy==1.14.1",
    "setuptools==75.6.0",
]
